# VOC_breadboard

./: CMakeLists.txt  config.txt  main.c
